fix: calendarDate has too much border on the bottom

--- a/src/components/CalendarDate/CalendarDate.scss
+++ b/src/components/CalendarDate/CalendarDate.scss
@@ -1,5 +1,6 @@
 .calendar-date {
   border: solid 5px $color__red;
+  border-bottom: 0;
   display: inline-block;
   text-align: center;
 
